# garmidian-sync

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  config.example.json  package.json  pyproject.toml  requirements.txt  start-dev.bat  start-web-ui.bat
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
api/: dev.mjs  package.json  server.mjs
docs/: git-workflow.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: apiClient.js  dateUtils.js  main.js  noteRendering.js  recordListView.js  statusView.js  style.css  viewerView.js
frontend/tests/: dateUtils.test.js  noteRendering.test.js  statusView.test.js
src/garmin_obsidian_sync/: cli.py  config.py  exporter.py  formatters.py  garmin_connect_sync.py  garmindb_wrapper.py  runtime.py  translations.py  webapp.py
tests/: test_exporter.py  test_webapp.py
