[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "garmin-obsidian-sync"
version = "0.1.0"
description = "Sync Garmin Connect data and export daily/activity notes to Obsidian."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "garminconnect>=0.3.2",
  "curl_cffi>=0.15.0",
]

[project.scripts]
garmin-obsidian-sync = "garmin_obsidian_sync.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
